--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html>
+    <head>   <link rel="stylesheet" type="text/css" href="style.css"> 
+             <title>My Site Title</title>   
+    </head>
+    <body>
+        
+    </body>
+</html>
