--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>   <link rel="stylesheet" type="text/css" href="style.css"> 
-             <title>My Site Title</title>   
+<link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"/>
+<link rel="stylesheet" type="text/css" href="company.css" />
+<link rel="stylesheet" type="text/css" href="engineering-department.css" />
+<link rel="stylesheet" type="text/css" href="project-x-launch.css" />
+<link rel="stylesheet" type="text/css" href="typography.css" />
+ <title>Cat Perry's Favorite Cats</title>   
     </head>
     <body>
-        
+
     </body>
 </html>
